--- a/index.html
+++ b/index.html
@@ -866,7 +866,7 @@
               <div class="carousel-inner">
                 <div class="carousel-item active">
                   <div class="configurator-viewer">
-                    <img src="assets/background/background.png"/>
+                    <img src="https://raw.githubusercontent.com/ShadowProgr/kyuu-configurator/main/assets/background/background.png?raw=true"/>
                     <img src="assets/case-bottom/alu-eblack.png" class="layer render-bottom"/>
                     <img src="assets/weight-hybrid/alu-ewhite.png" class="layer render-weight"/>
                     <img src="assets/subweight/alu-eblack.png" class="layer render-subweight"/>
@@ -877,7 +877,7 @@
                 </div>
                 <div class="carousel-item">
                   <div class="configurator-viewer">
-                    <img src="assets/background/background.png"/>
+                    <img src="https://raw.githubusercontent.com/ShadowProgr/kyuu-configurator/main/assets/background/background.png?raw=true"/>
                     <img src="assets/case-bottom/alu-eblack.png" class="layer render-bottom"/>
                     <img src="assets/weight-hybrid/alu-ewhite.png" class="layer render-weight"/>
                     <img src="assets/subweight/alu-eblack.png" class="layer render-subweight"/>
@@ -888,7 +888,7 @@
                 </div>
                 <div class="carousel-item">
                   <div class="configurator-viewer">
-                    <img src="assets/background/background.png"/>
+                    <img src="https://raw.githubusercontent.com/ShadowProgr/kyuu-configurator/main/assets/background/background.png?raw=true"/>
                     <img src="assets/case-bottom/alu-eblack.png" class="layer render-bottom"/>
                     <img src="assets/weight-hybrid/alu-ewhite.png" class="layer render-weight"/>
                     <img src="assets/subweight/alu-eblack.png" class="layer render-subweight"/>
