Update info link

--- a/index.html
+++ b/index.html
@@ -851,7 +851,7 @@
                 <span>Reset's Kyuu R2</span>
               </h1>
               <p class="text-muted">
-                Join our <a href="https://discord.gg/7BSFhevRG6" target="_blank">discord server</a> to learn more.
+                Thông tin chi tiết trên <a href="https://www.facebook.com/groups/vnmkmarket/posts/1425122714550137/" target="_blank">Chợ bàn phím cơ Việt Nam</a>.
               </p>
             </div>
           </div>
