--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="prices.js"></script>
     <script type="text/javascript" src="script.js"></script>
   </head>
   <body>
@@ -910,9 +911,9 @@
           </div>
           <div class="align-items-center d-flex font-1-5 justify-content-center h-25">
             <div class="price text-center">
-              <span class="price-text text-uppercase font-weight-bold">Price: </span>
+              <span class="price-text text-uppercase font-weight-bold">Giá: </span>
               <span class="price-number font-italic">100.000.000</span>
-              <span class="price-currency font-italic">USD</span>
+              <span class="price-currency font-italic"> ₫</span>
             </div>
           </div>
         </div>
