Add PCB options

--- a/index.html
+++ b/index.html
@@ -843,6 +843,23 @@
                 </label class="btn btn-outline-secondary me-2 mb-2">
               </span>
             </div>
+            <div class="option-set grp-pcb">
+              <div class="option-set-header">
+                <h4>PCB</h4>
+              </div>
+              <span>
+                <input type="radio" class="btn-radio" name="grp-pcb" id="pcb-solder">
+                <label class="btn btn-outline-secondary me-2 mb-2" for="pcb-solder">
+                  <div>Mechlovin' 9 (Solder)</div>
+                </label class="btn btn-outline-secondary me-2 mb-2">
+              </span>
+              <span>
+                <input type="radio" class="btn-radio" name="grp-pcb" id="pcb-hotswap">
+                <label class="btn btn-outline-secondary me-2 mb-2" for="pcb-hotswap">
+                  <div>Hermit Ape (Hotswap)</div>
+                </label class="btn btn-outline-secondary me-2 mb-2">
+              </span>
+            </div>
           </div>
         </div>
         <div class="col-12 col-md-7">
